<resources>
    <string name="app_name">HTClone</string>
    <string name="txt_SignUp">Don\'t have an account? Create One</string>
    <string name="txt_sign_in">LogIN</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_update_info">Update Info</string>
    <string name="hint_phone">01XXXXXXXXX</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Your Name</string>
    <string name="hint_address">Your Current Address</string>
    <string name="txt_phonenumber_heading">Verify your mobile number</string>
    <string name="txt_phonenumber_sub_heading">Please Enter your phone number to get a verification code</string>
    <string name="name_text">Enter Your Name</string>
    <string name="address_text">Enter Your Address</string>
    <string name="greetings_text">Hello User</string>
    <string name="phonenumber_text">01XXXXXXXXX</string>
    <string name="address_details">Address: (Getting from Database)</string>
    <string name="set_user_info_text"><u>Update User Info</u> </string>
    <string name="change_address_text"><u>Change Address</u> </string>
    <string name="change_password_text"><u>Change Password</u> </string>
    <string name="logout_text"><u>Log Out</u> </string>
    <string name="title_activity_maps">Map</string>
</resources>
