<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/profileImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/greetingsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/greetings_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/phoneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/phonenumber_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
             />
        <TextView
            android:id="@+id/addressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/address_details"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/setupUserInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/set_user_info_text"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/changeAddressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/change_address_text"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/changePasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/change_password_text"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/loggOutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/logout_text"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_gravity="center"
            />

    </LinearLayout>

</LinearLayout>