<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/phoneHeadingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_phonenumber_heading"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phoneSubHeadingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_phonenumber_sub_heading"
            android:textColor="@color/colorGrey"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/phoneNumberGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/phoneNumberField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/hint_phone"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true" />


            <Button
                android:id="@+id/btnSignUp"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/btn_continue"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/varificationGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >

            <EditText
                android:id="@+id/verifyCodeField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="Enter Verification Code"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />


            <Button
                android:id="@+id/btnVerify"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Verify Code"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>